Base do projeto

--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog Kenzie</title>
+    <link rel="icon" href="https://kenzie.com.br/favicon.jpeg">
 </head>
+
 <body>
-    <p>É O ZICA</p>
+    <h1>Blog da Kenzie</h1>
+    <h2>Título do primeiro post</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus neque dolore exercitationem tempora officiis
+        minima fugiat animi, iste, laboriosam tempore temporibus at! Accusantium, autem molestiae recusandae quibusdam
+        quidem enim! Et.</p>
+    <p>Autor</p>
+    <a href="">Referencia post</a>
+
+    <h2>Título do segundo post</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus neque dolore exercitationem tempora officiis
+        minima fugiat animi, iste, laboriosam tempore temporibus at! Accusantium, autem molestiae recusandae quibusdam
+        quidem enim! Et.</p>
+    <p>Autor</p>
+    <a href="">Referencia post</a>
+
+    <h2>Título do terceiro post</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus neque dolore exercitationem tempora officiis
+        minima fugiat animi, iste, laboriosam tempore temporibus at! Accusantium, autem molestiae recusandae quibusdam
+        quidem enim! Et.</p>
+    <p>Autor</p>
+    <a href="">Referencia post</a>
+
+    <h2>Deseja receber noíticas diretamente no seu email?</h2>
+
+    <p>Insira seu email de preferência</p>
+
+    <form>
+        <label for="email">E-mail</label>
+        <input type="text" id="email" required="true" placeholder="Digite seu email aqui..."
+        >
+        <button type="submit">Receber newsletter</button>
+    </form>
+
+
+
 </body>
+
 </html>
