--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -7,43 +7,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Kenzie</title>
     <link rel="icon" href="https://kenzie.com.br/favicon.jpeg">
+    <meta name="description" content="Conheça alguns assuntos que são tratados dentro da Kenzie!" />
 </head>
 
 <body>
+
     <h1>Blog da Kenzie</h1>
-    <h2>Título do primeiro post</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus neque dolore exercitationem tempora officiis
-        minima fugiat animi, iste, laboriosam tempore temporibus at! Accusantium, autem molestiae recusandae quibusdam
-        quidem enim! Et.</p>
-    <p>Autor</p>
-    <a href="">Referencia post</a>
 
-    <h2>Título do segundo post</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus neque dolore exercitationem tempora officiis
-        minima fugiat animi, iste, laboriosam tempore temporibus at! Accusantium, autem molestiae recusandae quibusdam
-        quidem enim! Et.</p>
-    <p>Autor</p>
-    <a href="">Referencia post</a>
+    <main>
 
-    <h2>Título do terceiro post</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus neque dolore exercitationem tempora officiis
-        minima fugiat animi, iste, laboriosam tempore temporibus at! Accusantium, autem molestiae recusandae quibusdam
-        quidem enim! Et.</p>
-    <p>Autor</p>
-    <a href="">Referencia post</a>
+        <article>
+            <h2>HABILIDADES DE UM DESENVOLVEDOR WEB: HARD SKILLS E SOFT SKILLS</h2>
+            <p>Um desenvolvedor web é o responsável por toda a estrutura de um site, ele é quem torna realidade todo o
+                design e
+                funcionalidades do site da maneira que conhecemos.<br> Esse profissional também precisa assegurar que
+                tudo
+                saia
+                conforme o <strong>planejado</strong> , sendo então, uma função que exige responsabilidade e
+                conhecimento.
+                <br>
+                No conteúdo de hoje iremos apresentar quais habilidades esse profissional deve possuir, tanto as
+                competências
+                técnicas, quanto as comportamentais.<br> Aproveite a leitura até o final, pois essa é uma das áreas mais
+                promissoras
+                do mercado de trabalho atual!
+            </p>
+            <p>Escrito por: <i>Ugo Roveda</i></p>
+            <a target="_blank" href="https://kenzie.com.br/blog/habilidades-de-um-desenvolvedor/">Referencia post</a>
+        </article>
 
-    <h2>Deseja receber noíticas diretamente no seu email?</h2>
+        <article>
+            <h2>MANIFESTO ÁGIL: O QUE É E QUAIS SÃO OS 12 PRINCÍPIOS ÁGEIS</h2>
+            <p>Muitas organizações consideram que o momento atual de transformação no trabalho teve origem com o
+                <strong>Manifesto Ágil.</strong> <br>
+                Metodologias ágeis são abordagens para o desenvolvimento de produtos relacionados com valores descritos
+                no
+                Manifesto Ágil para desenvolvimento de Software, assinado em 2001 em Utah. <br>
+                Neste conteúdo iremos apresentar como tudo isto se iniciou!
+            </p>
+            <p>Escrito por: <i>Daniel Kriger</i></p>
+            <a target="_blank" href="https://kenzie.com.br/blog/manifesto-agil/">Referencia post</a>
+        </article>
 
-    <p>Insira seu email de preferência</p>
+        <article>
+            <h2>O QUE É SISTEMA OPERACIONAL E SEU PAPEL NA PROGRAMAÇÃO</h2>
+            <p>Sendo da área da tecnologia ou não, certamente você já deve ter ouvido falar em <strong>sistema
+                    operacional</strong>. Existem
+                vários conceitos sobre, porém uma coisa é fato: <strong>ele é essencial</strong>! <br>
+                No artigo de hoje você vai aprender o que é sistema operacional, o que ele faz em seu computador e qual
+                o
+                papel
+                dele na programação. </p>
+            <p>Escrito por: <i>Ugo Roveda</i></p>
+            <a target="_blank" href="https://kenzie.com.br/blog/sistema-operacional/">Referencia post</a>
+        </article>
 
-    <form>
-        <label for="email">E-mail</label>
-        <input type="text" id="email" required="true" placeholder="Digite seu email aqui..."
-        >
-        <button type="submit">Receber newsletter</button>
-    </form>
+        <article>
+            <h2>O QUE É PLACEHOLDER E COMO UTILIZÁ-LO EM SEU PROJETO</h2>
+            <p>Se você é um dev, provavelmente já conhece o termo placeholder. Afinal, dizem que ele salva os devs que
+                já
+                fizeram algum <em>“remendo”</em> para poder simular o que o placeholder faz de forma tão fácil. <br>
+                Mas, fique tranquilo(a), se você nunca ouviu sobre esse atributo, continue acompanhando este artigo e
+                descubra
+                mais sobre o que é placeholder e como utilizá-lo em seu projeto! </p>
+            <p>Escrito por: <i>Daniel Kriger</i></p>
+            <a target="_blank" href="https://kenzie.com.br/blog/placeholder/">Referencia post</a>
+        </article>
 
+        <h2>Deseja receber noíticas diretamente no seu email?</h2>
 
+        <p>Insira seu email de preferência</p>
+
+    </main>
+
+    <footer>
+        <form>
+            <label for="email">E-mail</label>
+            <input type="text" id="email" required="true" placeholder="Digite seu email aqui...">
+            <button type="submit">Receber newsletter</button>
+        </form>
+    </footer>
 
 </body>
 
