--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a target="_blank" href="https://kenzie.com.br/blog/placeholder/">Referencia post</a>
         </article>
 
-        <h2>Deseja receber noíticas diretamente no seu email?</h2>
+        <h2>Deseja receber noticías diretamente no seu email?</h2>
 
         <p>Insira seu email de preferência</p>
 
